--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=DbCoreBlog; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.; Database=DbVirtualWaiter; Trusted_Connection=True; MultipleActiveResultSets=true"
   }
 }
