Update conection DB and Migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.; Database=DbVirtualWaiter; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=grechik-new.database.windows.net; Database=MyFirstDb; User Id=grechik1974; Password=qwerty1-; MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=.; Database=DbVirtualWaiter; Trusted_Connection=True; MultipleActiveResultSets=true"
   }
 }
